# FastOrgansLocalizationOnCT

./: README.md  pyproject.toml  requirements.txt
docs/: DATASETS.md
notebooks/: image_exploration.ipynb
src/: config.py
src/data/: augmentation.py  base_datasets.py  datamodules.py  dataset.py  datasets.py  split_volumes.py  train_test_split.py  unused.py  unzipping_files.py
src/models/: compute_metrics.py  metrics.py  model.py  predict_model.py  test_model.py  train_model.py
src/utils/: utils.py
src/visualization/: utils.py  visualize.py
