[tool.poetry]
name = "fastorganslocalizationonct"
version = "0.1.0"
description = ""
authors = ["vpavlishen <v.pavlishen@businessdecision.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
numpy = "^1.23.0"
matplotlib = "^3.5.2"
scikit-image = "^0.19.3"
nibabel = "^4.0.1"
napari = "^0.4.16"
pytorch-lightning = "^1.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
